--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "src/lib/vendor/symfony"]
 	path = src/lib/vendor/symfony
 	url = https://github.com/symfony/symfony1.git
+[submodule "src/plugins/sfTwitterBootstrapPlugin"]
+	path = src/plugins/sfTwitterBootstrapPlugin
+	url = git@github.com:ARAMISAUTO/sfTwitterBootstrapPlugin.git
+[submodule "src/plugins/sfDoctrineGuardPlugin"]
+	path = src/plugins/sfDoctrineGuardPlugin
+	url = https://github.com/ibolmo/sfDoctrineGuardPlugin.git
