--- a/src/apps/backend/config/settings.yml
+++ b/src/apps/backend/config/settings.yml
@@ -33,3 +33,12 @@ all:
 
     # Enable the database manager
     use_database:           true
+
+    # Enable modules
+    enabled_modules: [default, sfTwitterBootstrap, sfGuardGroup, sfGuardUser, sfGuardPermissions, sfGuardAuth]
+
+    # Configure sfGuard
+    login_module:           sfGuardAuth
+    login_action:           signin
+    secure_module:          sfGuardAuth
+    secure_action:          secure
