--- a/src/apps/backend/config/view.yml
+++ b/src/apps/backend/config/view.yml
@@ -12,9 +12,24 @@ default:
     #language:     en
     #robots:       index, follow
 
-  stylesheets:    [main.css]
+  stylesheets:
+    - /sfTwitterBootstrapPlugin/bootstrap/docs/assets/css/bootstrap.css # compiled css are now in the docs
+    - /sfTwitterBootstrapPlugin/css/style.css
+    - /sfTwitterBootstrapPlugin/css/jquery-ui-1.8.16.custom.css # For date pickers ...
+    - main.css
 
-  javascripts:    []
+  javascripts:
+    - "/sfTwitterBootstrapPlugin/js/jquery-1.7.min.js"
+    - "/sfTwitterBootstrapPlugin/js/jquery.tablesorter.min.js"
+    - "/sfTwitterBootstrapPlugin/js/google-code-prettify/prettify.js"
+    - "/sfTwitterBootstrapPlugin/bootstrap/js/bootstrap-dropdown.js"
+    - "/sfTwitterBootstrapPlugin/bootstrap/js/bootstrap-tooltip.js"
+    - "/sfTwitterBootstrapPlugin/bootstrap/js/bootstrap-scrollspy.js"
+    - "/sfTwitterBootstrapPlugin/bootstrap/js/bootstrap-modal.js"
+    - "/sfTwitterBootstrapPlugin/bootstrap/js/bootstrap-alert.js"
+    - "/sfTwitterBootstrapPlugin/js/application.js"
+    - "/sfTwitterBootstrapPlugin/js/bootbox/bootbox.min.js"
+    - "/sfTwitterBootstrapPlugin/js/jquery-ui-1.8.16.custom.min.js" # For date pickers ...
 
   has_layout:     true
-  layout:         layout
+  layout:         %SF_PLUGINS_DIR%/sfTwitterBootstrapPlugin/templates/layout
