--- a/src/apps/backend/modules/post/config/generator.yml
+++ b/src/apps/backend/modules/post/config/generator.yml
@@ -2,7 +2,7 @@ generator:
   class: sfDoctrineGenerator
   param:
     model_class:           Post
-    theme:                 admin
+    theme:                 twitter
     non_verbose_templates: true
     with_show:             false
     singular:              ~
