--- a/src/apps/backend/modules/release/config/generator.yml
+++ b/src/apps/backend/modules/release/config/generator.yml
@@ -13,8 +13,15 @@ generator:
 
     config:
       actions: ~
-      fields:  ~
-      list:    ~
+      fields:
+        title:
+          label: Titre
+          help: Le titre de la sortie
+        sku:
+          label: sku
+          help: La référence catalogue
+      list:
+        display: [=sku, title, artist]
       filter:  ~
       form:    ~
       edit:    ~
