--- a/src/apps/frontend/config/settings.yml
+++ b/src/apps/frontend/config/settings.yml
@@ -35,6 +35,7 @@ all:
     use_database:           true
 
     # i18n
+    i18n:                   true
     default_culture:        fr_FR
 
     # helpers
