--- a/src/apps/frontend/config/settings.yml
+++ b/src/apps/frontend/config/settings.yml
@@ -39,4 +39,4 @@ all:
     default_culture:        fr_FR
 
     # helpers
-    standard_helpers: [Partial, I18N]
+    standard_helpers: [Partial, I18N, Text]
