--- a/src/data/fixtures/fixtures.yml
+++ b/src/data/fixtures/fixtures.yml
@@ -588,3 +588,70 @@ Release:
           Jacques Cochise does not do things half-ass : his album doesn’t smooth around the corners, he collides with them head on : 10m39s or uncut exhuberance.
           Vengeance is first and foremost a personal album, a message to a girl. That doesn’t mean that Jacques has abandoned the concept of melody, in fact he proves himself once again as clear and effective.
           The artwork was designed by Satanik Mike, a graphical artist also in love with vengeance and mutilated by love.
+
+Content:
+  main:
+    id: 1
+    links1: |
+      <h2>Da ! Heard It Records</h2>
+      <ul>
+        <li><a href="">Dogmazic</a></li>
+        <li><a href="">Discogs</a></li>
+        <li><a href="">Facebook</a></li>
+        <li><a href="">Free Music Archive</a></li>
+        <li><a href="">Google +</a></li>
+        <li><a href="">Last.fm</a></li>
+        <li><a href="">Twitter</a></li>
+      </ul>
+      <h2>Labels</h2>
+      <ul>
+        <li><a href="">8bitpeoples</a></li>
+        <li><a href="">Ego Twister </a></li>
+        <li><a href="">Proot Records</a></li>
+      </ul>
+    links2: |
+      <h2>Radios</h2>
+      <ul>
+        <li><a href="">Mazemod</a></li>
+        <li><a href="">Musique Approximative</a></li>
+        <li><a href="">Ouïedire</a></li>
+        <li><a href="">The Brain</a></li>
+        <li><a href="">Radio Clash</a></li>
+        <li><a href="">We Are Not Toys</a></li>
+      </ul>
+      <h2>Friends</h2>
+      <ul>
+        <li><a href="">otro</a></li>
+        <li><a href="">Mobyone</a></li>
+        <li><a href="">Nazilla </a></li>
+        <li><a href="">Superpromotion </a></li>
+      </ul>
+    footer_video: |
+      <iframe src="http://player.vimeo.com/video/5997914?byline=0&amp;portrait=0" width="350" height="300" class="infos_vids_embed" frameborder="0"></iframe>
+    Translation:
+      fr:
+        informations: |
+          Créé en 2006, Da ! Heard it Records est un net-label flirtant avec les musiques Toyz-Pop, Electro Trash, Chiptune, Breakcore, Techno Parodique, Electro Punk, Acid, etc, avec un goût prononcé pour le 8-bit et le pixel art. Label éclectique, il a pour ambition de promouvoir de nouveaux artistes et des nouvelles musiques. D!HR est un label ouvert au monde, tant aux artistes professionnels qu'aux amateurs, accessible à tout auditeur de par sa position engagée sur la culture libre et gratuite et par la nature de ses publications. En effet, chaque sortie est téléchargeable gratuitement sur le site, dans divers formats audios et disponible en CD série limitée à un prix abordable. Les morceaux sont diffusés sous une licence Creative Commons, encourageant le partage et la réutilisation des œuvres.
+        credits: |
+          <ul>
+            <li>Johan Mailleret Initiateur du projet</li>
+            <li>Michel Bertier Hébergeur dopé au pastis</li>
+            <li>Nazzilla Cloud designer</li>
+          </ul>
+        greetings: |
+          Bimbo Tower, Danielle, Didi, Fita, Gabriel, Maryn, Momo Seb, Parasite, Paul, Valkiri, Vincent, les copains ainsi que les graphistes
+      en:
+        informations: |
+          Da ! Heard it Records, created in 2006, is a net-label touching on Toyz-Pop, Electro Trash, Chiptune, Breakcore and Electro Punk among others, with a heavy leaning towards 8-bit music and pixel/net art.
+          The aim of this eclectic record company is to promote new artists and new types if music. D!HR is an outward-looking label, accessible to professional and amateur musicians alike, and to all types of listener, thanks to its policy of open and free culture and to the types of music it publishes.
+          Its albums are distributed under a Creative Commons licence, encouraging sharing and reuse of the music.
+          Now you can discover the musical universe of Da ! Heard It Records (Ben Et Bené, Xerak, Goto80, Mini Roc, Sidabitball, Sputnik Booster, Computer Truck, ...) on site
+          By subscribing to the rss feed or newsletter you will be kept informed of upcoming releases of Le Chien Violet,Aniaetleprogrammeur, etc.
+        credits: |
+          <ul>
+            <li>Johan Mailleret Initiateur du projet</li>
+            <li>Michel Bertier Hébergeur dopé au pastis</li>
+            <li>Nazzilla Cloud designer</li>
+          </ul>
+        greetings: |
+          Bimbo Tower, Danielle, Didi, Fita, Gabriel, Maryn, Momo Seb, Parasite, Valkiri, Vincent, also our friends ∧ graphist
