--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="net.daheardit-records.www" default="help" basedir=".">
-	<import file="opt/ananas-build-toolkit/ant/main.xml" />
+	<import file="opt/ananas-build-toolkit/ant/toolkit.xml" />
+
+	<!-- This task can be used to override default profile loading behavior -->
+	<target name="setprofile" depends="toolkit.setprofile" />
 </project>
