[frontend] implemented posts RSS feed

--- a/src/apps/frontend/config/routing.yml
+++ b/src/apps/frontend/config/routing.yml
@@ -1,6 +1,18 @@
 # You can find more information about this file on the symfony website:
 # http://www.symfony-project.org/reference/1_4/en/10-Routing
 
+# feeds
+feeds_posts:
+  url: /:sf_culture/feeds/posts
+  param: { module: feeds, action: posts }
+  requirements:
+    sf_culture: (?:fr|en)
+
+# post
+post_show:
+  url: /post/:slug
+  param: { module: post, action: show }
+
 # artist
 artist_show:
   url:   /:sf_culture/artist/:slug
