--- a/src/apps/frontend/config/routing.yml
+++ b/src/apps/frontend/config/routing.yml
@@ -1,6 +1,11 @@
 # You can find more information about this file on the symfony website:
 # http://www.symfony-project.org/reference/1_4/en/10-Routing
 
+# main
+main_thanks:
+  url: /thanks
+  param: { module: main, action: thanks }
+
 # feeds
 feeds_posts:
   url: /:sf_culture/feeds/posts
