[frontend] links to share releases on facebook and google plus

--- a/src/data/fixtures/fixtures.yml
+++ b/src/data/fixtures/fixtures.yml
@@ -580,7 +580,7 @@ Release:
     title: "Gameboy Love EP"
     sku: D!HR-16
     slug: dhr-16
-    is_new: true
+    is_new: false
     Artist: buskerdroid
     paypal_id: 5KQHBCVEZSTKY
     Translation:
