[data] fixed fixtures

--- a/src/data/fixtures/fixtures.yml
+++ b/src/data/fixtures/fixtures.yml
@@ -720,7 +720,8 @@ Content:
           <a href="http://www.thibaulthuertas.com/">Thibault Huertas</a>,
           Tom Woxom,
           <a href="http://www.vic-net.com/">Vicnet</a>,
-          <a href="http://www.xerak.com">Xerak</a>,      en:
+          <a href="http://www.xerak.com">Xerak</a>
+      en:
         informations: |
           Da ! Heard it Records, created in 2006, is a net-label touching on Toyz-Pop, Electro Trash, Chiptune, Breakcore and Electro Punk among others, with a heavy leaning towards 8-bit music and pixel/net art.
           The aim of this eclectic record company is to promote new artists and new types if music. D!HR is an outward-looking label, accessible to professional and amateur musicians alike, and to all types of listener, thanks to its policy of open and free culture and to the types of music it publishes.
